--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gallery</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
+  <link rel="stylesheet" href="./css/styles.css"/>
+</head>
+<body>
+  <ul class="gallery"></ul>
+  <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+  <script>
 const images = [
  {
  preview:
@@ -63,3 +76,36 @@ const images = [
  description: 'Lighthouse Coast Sea',
  },
 ];
+
+const galContainer = document.querySelector('ul.gallery');
+const galMarkup = images.map(({ preview, original, description }) => {
+return `
+<li class="gallery-item">
+<a class="gallery-link" href="${original}">
+<img
+class="gallery-image"
+src="${preview}"
+data-source="${original}"
+alt="${description}"
+/>
+</a>
+</li>
+`;
+}).join('');
+
+galContainer.innerHTML = galMarkup;
+galContainer.addEventListener('click', event => {
+event.preventDefault();
+if (event.target.nodeName === 'IMG') {
+const largeImageURL = event.target.dataset.source;
+console.log('Посилання на велике зображення:', largeImageURL);
+const instance = basicLightbox.create(`
+<img class="modal" src="${largeImageURL}" width="1112" height="640">
+`);
+instance.show();
+}
+});
+
+</script>
+</body>
+</html>
